# sonic8

./: .env  .gitignore  AGENTS.md  Makefile  README.md  README_DB_CONSOLE.md  Run_Perps_Menu.bat  alert_common.py  crypto_console.py  dump_token_accounts.py  fuckhead.txt  generate-position-and-position-request-pda.ts  gmsol_positions_probe.py  gmx_solana_console.cmd  gmx_solana_console.json  gmx_solana_console.ps1  go.bat  launch.bat  launch_pad.py  package-lock.json  package.json  perps_accounts.ts  perps_constants.ts  remaining-accounts.ts  requirements-dev.txt  requirements.txt  sonic_monitor.py  tsconfig.json  twilio_run.py  types.ts  wallet_balances.py  wallet_cli.py  webterm_up.ps1
.github/: pull_request_template.md
.run/: gmsol_positions_probe.run.xml
alert_v2/: __init__.py  db.py  models.py  repository.py
alert_v2_hybrid/: db.py  models.py
api/: __init__.py  gmx_router.py  main.py  openapi.yaml
backend/: .env  __init__.py  app.py  deps.py  launch_pad.py  mother.db  mother.db-shm  mother.db-wal  signer_id.json  sitecustomize.py  sonic_backend_app.py
backend/core/gmx_core/rust/: Cargo.toml
backend/core/gmx_core/rust/.cargo/: config.toml
backend/core/gmx_core/rust/src/: main.rs  ops.rs
codex/: INSTRUCTIONS.md  README_Codex_Handoff.md  README_FOR_CODEX.md  README_v8.txt
config/: __init__.py  config_loader.py
data/: learning_database.db  learning_database.db-shm  learning_database.db-wal
docs/: alert_system__spec.md  alert_thresholds_api.md  alert_v2_hybrid_spec.md  alert_v2_spec.md  backend_api_spec.md  berry_react_guide.md  design_spec.md  dev_setup.md  form_ui_description.md  frontend_api_spec.md  frontend_description_spec.md  frontend_file_description.md  frontend_repo_map.md  fun_core_integration.md  fun_core_spec.md  price_api_24hr.md  repo_map.md  sonic_design_spec.md  sonic_file_description.md  sonic_react_grid_spec.md  sonic_repo_map.md  trader_shop_frontend.md  ui_theme_spec.md
frontend/: .env  .env.qa  index.html  jest.config.js  jsconfig.json  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.js  vite.config.mjs
junk_drawer/: balances_bulk.py  send_test_sms (2).py  send_test_sms.py
jupiter-perps-anchor-idl-parsing/: package-lock.json  package.json  perps_menu.config.json  tsconfig.json
keys/: signer.txt
patches/: GlobalSettingCard.patch  LiquidationMonitorCard.patch  MarketMonitorCard.patch  MonitorManager.diff  MonitorManager.patch  ProfitMonitorCard.patch  README.md  README_CODEX.md  SonicMonitorCard.patch  TEST_PLAN.md  conftest.py  datalocker_session_patch.diff  integration_instructions.txt  monitor_core.diff  monitor_core_spec.diff  monitor_settings_api.diff  sonic_monitor_log.patch  test_models.py  (+2 more)
(+1846 files in other folders)
