[package]
name = "gmx_runner"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bs58 = "0.5"
bip39 = { version = "2", default-features = false, features = ["std"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slip10 = "0.4"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

ed25519-dalek = "1"

# Solana key types for the SDK client
solana-sdk = "2"
solana-client = "2"

# ✅ Official GMX-Solana SDK (client feature)
gmsol-sdk = { version = "0.8", features = ["client", "solana-client", "serde", "serde_json", "tokio"] }
