[package]
name = "gmx_runner"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bs58 = "0.5"
bip39 = { version = "2", default-features = false, features = ["std"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slip10 = "0.4"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Solana crates (force rustls, no OpenSSL)
solana-sdk = "2"
solana-client = { version = "2", default-features = false, features = ["rustls-tls"] }

# Make sure any HTTP the graph uses picks rustls, not OpenSSL.
# (This also influences transitive deps that rely on reqwest.)
reqwest = { version = "0.12", default-features = false, features = ["json", "http2", "rustls-tls"] }

# ✅ GMX-Solana SDK (no default features; we explicitly opt into client + solana-client)
gmsol-sdk = { version = "0.8", default-features = false, features = ["client", "solana-client", "serde", "serde_json", "tokio"] }

[profile.release]
lto = "thin"
codegen-units = 1
