[package]
name = "gmx_runner"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bs58 = "0.5"
bip39 = { version = "2", default-features = false, features = ["std"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slip10 = "0.4"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Solana types are enough for key handling; don't pin solana-client here.
solana-sdk = "2"

# GMX-Solana client crate (we'll wire calls next). Keep features minimal.
# If your crate name is `gmsol-sdk` in your lockfile, keep it; if it's `gmsol`, swap the name below.
gmsol-sdk = { version = "0.8", default-features = false, features = ["client", "serde", "serde_json", "tokio"] }

[profile.release]
lto = "thin"
codegen-units = 1
